Fixed : why us section on small screen

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -151,7 +151,7 @@
             text-transform: uppercase;
             font-family: var(--font-family-primary);
             letter-spacing: 1.5px;
-            padding-bottom: var(--spacing-xs);
+            padding-bottom: var(--spacing-sm);
         }
         ul {
             display: flex;
@@ -189,7 +189,7 @@
         display: flex;
         flex-direction: column;
         .title {
-            font-size: clamp(3.8rem, 4vw + 1rem, 4rem);
+            font-size: clamp(2.8rem, 3vw + 1rem, 3rem);
             text-transform: uppercase;
             color: var(--color-dark);
             font-family: var(--font-family-primary);
@@ -220,7 +220,7 @@
                         transform: translateX(3%);
                     }
                     p {
-                        font-size: clamp(2.6rem, 2.8vw + 1rem, 2.8rem);
+                        font-size: clamp(1.8rem, 2.8vw + 1rem, 2.8rem);
                         text-transform: uppercase;
                         font-family: var(--font-family-secondary);
                         letter-spacing: 1.5px;
@@ -247,8 +247,9 @@
         display: flex;
         flex-direction: column;
         .title {
-            font-size: clamp(3.8rem, 4vw + 1rem, 4rem);
+            font-size: clamp(2.8rem, 3vw + 1rem, 3rem);
             text-transform: uppercase;
+            text-align: center;
             color: var(--color-white);
             font-family: var(--font-family-primary);
             letter-spacing: 1.5px;
@@ -290,7 +291,8 @@
         .textBox {
             flex: 1;
             .title {
-                font-size: clamp(3.8rem, 4vw + 1rem, 4rem);
+                font-size: clamp(2.8rem, 3vw + 1rem, 3rem);
+                text-align: center;
                 text-transform: uppercase;
                 color: var(--color-brown);
                 font-family: var(--font-family-primary);
@@ -438,8 +440,18 @@
 @media screen and (max-width: 640px) {
     .sectionWhyUs {
         .textBox {
+            .title {
+                text-align: center;
+            }
             ul {
                 gap: var(--spacing-sm);
+                li {
+                    justify-content: center;
+                    text-align: center;
+                    .icon {
+                        display: none;
+                    }
+                }
             }
         }
     }
